--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+    implementation 'androidx.room:room-ktx:2.4.0'
     annotationProcessor 'androidx.room:room-compiler:2.4.0'
     implementation 'androidx.room:room-common:2.4.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
